--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,13 @@
             <h2 class="product-card__name">Кускен Navy Blue</h2>
             <h2 class="product-card__price">16 990₽</h2>
          </div>
-         <div class="product-main__second-info"></div>
+         <div class="product-card__second-info">
+            <p>Цвет: <span class="product-card__parametres-gray">Темно-синий</span></p>
+            <img src="./image/svg/color-option.svg" alt="color" class="product-card__color-square" />
+            <p> Количество: <span class="product-card__parametres-gray">1</span></p>
+            <p>Размер(Ш×Д×В): <span class="product-card__parametres-gray">218 СМ × 95 СМ × 90 СМ</span>
+            </p>
+         </div>
       </div>
 
       <button class="product-card__close-button">X</button>
